# ProceduralTerrainEngine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert
docs/: learning-notes.md
src/: main.cpp
src/app/: WorldExplorerApp.cpp  WorldExplorerApp.h
src/core/: PerformanceMetrics.h  ScopedTimer.h
src/input/: Input.cpp  Input.h
src/platform/: Window.cpp  Window.h
src/render/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/world/: Chunk.cpp  Chunk.h  ChunkCoord.h  ChunkManager.cpp  ChunkManager.h  TerrainGenerator.cpp  TerrainGenerator.h
